--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,16 @@
+// FONTS
+
+// Google Open Sans
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,800&display=swap');
+
+// Peace Sans
+@font-face {
+  font-family: 'peace_sansregular';
+  src: url('./fonts/peace_sans-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 // CSS RESET
 *,
 *::before,
@@ -15,4 +28,25 @@ html {
 $font-color: red;
 h1 {
     color: $font-color;
+    font-size: 40px;
+    font-family: 'peace_sansregular';
+
   }
+  p {
+    margin: 10px;
+    font-family: 'Open Sans', sans-serif;
+  }
+p:nth-of-type(1) {
+  font-weight: 400;
+}
+p:nth-of-type(2)  {
+  font-weight: 400;
+  font-style: italic;
+}
+p:nth-of-type(3) {
+  font-weight: 700;
+}
+
+p:nth-of-type(4) {
+  font-weight: 800;
+}
