--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,17 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; }
 
+body {
+  background-color: #000; }
+
 h1 {
-  color: red;
+  color: white;
   font-size: 40px;
   font-family: 'peace_sansregular'; }
 
 p {
   margin: 10px;
+  color: white;
   font-family: 'Open Sans', sans-serif; }
 
 p:nth-of-type(1) {
@@ -36,3 +40,13 @@ p:nth-of-type(3) {
 
 p:nth-of-type(4) {
   font-weight: 800; }
+
+.header {
+  max-width: 160rem;
+  height: 90vh;
+  margin: 0 auto;
+  background-image: url("../photo/bg1.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat; }
