--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,8 +24,12 @@ html {
   font-size: 62.5%;
 }
 
+body {
+ background-color: #000;
+}
+
 // SASS TEST
-$font-color: red;
+$font-color: white;
 h1 {
     color: $font-color;
     font-size: 40px;
@@ -34,6 +38,7 @@ h1 {
   }
   p {
     margin: 10px;
+    color: $font-color;
     font-family: 'Open Sans', sans-serif;
   }
 p:nth-of-type(1) {
