--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,6 +11,26 @@
   font-style: normal;
 }
 
+// FONT VARIABLES
+$font-primary: 'Open Sans',
+sans-serif;
+$font-secondary: 'peace_sansregular',
+sans-serif;
+
+// COLOR VARIABLES
+$bg-color-primary: #f5f5f5;
+$bg-color-secondary: #fff;
+
+$color-primary: #bc2e3a;
+$color-secondary: #171717;
+
+$font-color: #6f6f6e;
+$font-color-secondary: #fff;
+$font-color-headings: #494949;
+
+
+
+
 // CSS RESET
 *,
 *::before,
@@ -24,34 +44,9 @@ html {
   font-size: 62.5%;
 }
 
+// TYPOGRAPHY
 body {
- background-color: #000;
-}
-
-// SASS TEST
-$font-color: white;
-h1 {
-    color: $font-color;
-    font-size: 40px;
-    font-family: 'peace_sansregular';
-
-  }
-  p {
-    margin: 10px;
-    color: $font-color;
-    font-family: 'Open Sans', sans-serif;
-  }
-p:nth-of-type(1) {
-  font-weight: 400;
-}
-p:nth-of-type(2)  {
-  font-weight: 400;
-  font-style: italic;
-}
-p:nth-of-type(3) {
-  font-weight: 700;
-}
-
-p:nth-of-type(4) {
-  font-weight: 800;
+  background-color: $bg-color-secondary;
+  font-family: $font-primary;
+  font-size: 1.7rem;
 }
