--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   max-width: 160rem;
   height: 100vh;
   margin: 0 auto;
-  background-image: url("../photo/bg.jpg");
+  background-image: url("../photo/bg1.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: bottom;
