--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,28 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.7rem; }
 
+h2 {
+  font-family: "peace_sansregular", sans-serif;
+  color: #494949;
+  font-weight: 400;
+  font-size: 4rem; }
+
+.btn {
+  display: inline-block;
+  line-height: 4rem;
+  padding: 0 2.2rem;
+  border-radius: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  color: #242424;
+  box-shadow: -3.508px 11.476px 20px rgba(0, 1, 1, 0.47);
+  background-color: #fff; }
+  .btn--red {
+    color: #fff;
+    background-color: #bc2e3a; }
+
 .header {
-  max-width: 160rem;
   height: 100vh;
   margin: 0 auto;
   background-image: url("../photo/bg1.jpg");
@@ -104,14 +124,47 @@ body {
   width: 80rem;
   text-align: center; }
 
-.btn {
-  display: inline-block;
-  line-height: 4rem;
-  padding: 0 2.2rem;
-  border-radius: 2rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 700;
-  color: #242424;
-  box-shadow: -3.508px 11.476px 20px rgba(0, 1, 1, 0.47);
-  background-color: #fff; }
+.about {
+  padding: 5vw 10vw;
+  position: relative;
+  overflow: hidden;
+  max-width: 160rem;
+  box-sizing: border-box;
+  margin: 0 auto; }
+  .about ::before {
+    content: "";
+    top: 0%;
+    left: 70%;
+    transform-origin: 0 0;
+    transform: rotate(45deg) translate(-50%, -50%);
+    position: absolute;
+    z-index: -3;
+    width: 55vw;
+    height: 55vw;
+    background-color: #171717; }
+
+.about-wrapper {
+  max-width: 120rem;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between; }
+
+.about-text {
+  max-width: 45rem;
+  flex: 1 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start; }
+  .about-text p {
+    margin-top: 2rem;
+    margin-right: 10rem; }
+  .about-text .btn {
+    margin-top: 2rem; }
+
+.about-img {
+  max-width: 60rem;
+  flex: 1 1;
+  z-index: -3; }
+  .about-img img {
+    width: 100%; }
