--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,6 +49,7 @@ body {
   background-color: $bg-color-secondary;
   font-family: $font-primary;
   font-size: 1.7rem;
+  color: $font-color;
 }
 
 h2 {
@@ -56,6 +57,11 @@ h2 {
   color: $font-color-headings;
   font-weight: 400;
   font-size: 4rem;
+}
+h3 {
+  letter-spacing: -1px;
+  font-weight: 800;
+  font-size: 2.5rem;
 }
 
 // Buttons
