--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -64,6 +64,13 @@ h3 {
   font-size: 2.5rem;
 }
 
+h4 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
 // Buttons
 .btn {
   display: inline-block;
