Add team section

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,10 +23,12 @@ $bg-color-secondary: #fff;
 
 $color-primary: #bc2e3a;
 $color-secondary: #171717;
+$color-arrow: #424240;
 
 $font-color: #6f6f6e;
 $font-color-secondary: #fff;
 $font-color-headings: #494949;
+
 
 
 
