--- a/css/style.css
+++ b/css/style.css
@@ -303,3 +303,92 @@ h4 {
     color: #fff;
     padding: 2rem 4rem;
     font-size: 1.5rem; }
+
+.team {
+  padding: 5vw 10vw;
+  margin: 0 auto;
+  max-width: 120rem;
+  background-color: #f5f5f5; }
+  .team h2 {
+    text-align: center; }
+
+.slider-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .slider-wrapper .arrow-left {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 3rem 3rem 3rem 0;
+    border-color: transparent #424240 transparent transparent; }
+  .slider-wrapper .arrow-right {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 3rem 0 3rem 3rem;
+    border-color: transparent transparent transparent #424240; }
+
+.team-slider {
+  display: flex;
+  width: 90%;
+  align-items: center;
+  justify-content: center; }
+
+.team-person {
+  margin: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .team-person__img {
+    width: 17rem;
+    height: 17rem;
+    box-shadow: -3.5px 11.5px 20px rgba(0, 1, 1, 0.2);
+    border: 1rem solid #fff;
+    transform: rotate(45deg);
+    overflow: hidden; }
+    .team-person__img img {
+      width: 150%;
+      transform: rotate(-45deg) translateY(-6rem); }
+    .team-person__img--active {
+      margin-top: 2rem;
+      width: 26rem;
+      height: 26rem;
+      z-index: 1; }
+      .team-person__img--active img {
+        transform: rotate(-45deg) translateY(-8rem); }
+  .team-person__name {
+    width: 15rem;
+    transform: skew(45deg);
+    background-color: #636363;
+    color: #fff;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 3rem;
+    margin-top: -0.4rem; }
+    .team-person__name span {
+      display: block;
+      transform: skew(-45deg); }
+    .team-person__name--active {
+      background-color: #252525;
+      z-index: 1;
+      width: 17rem;
+      font-size: 1.8rem;
+      line-height: 4rem; }
+  .team-person__position {
+    width: 11rem;
+    transform: skew(45deg);
+    background-color: #bc2e3a;
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    margin-top: -0.4rem;
+    margin-left: 4rem;
+    z-index: 2; }
+    .team-person__position span {
+      display: block;
+      transform: skew(-45deg); }
