Add smooth scroll

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,12 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
+
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto; } }
 
 body {
   background-color: #fff;
