--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,6 +44,13 @@ $font-color-headings: #494949;
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
 }
 
 // TYPOGRAPHY
