Add media queries for small devices

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,9 @@ h4 {
     background-clip: text;
     -webkit-background-clip: text;
     position: relative; }
+    @media (max-width: 36em) {
+      .header__heading-box {
+        padding: 15vh 0 0 0; } }
   .header__heading {
     width: 80rem;
     letter-spacing: 4px;
@@ -89,11 +92,21 @@ h4 {
     color: transparent;
     font-family: "peace_sansregular", sans-serif;
     font-weight: 400; }
+    @media (max-width: 36em) {
+      .header__heading {
+        width: 100%;
+        line-height: 1; } }
     .header__heading--main {
       display: block;
       font-size: 12.8rem; }
+      @media (max-width: 36em) {
+        .header__heading--main {
+          font-size: 6rem; } }
     .header__heading--sub {
       font-size: 8.4rem; }
+      @media (max-width: 36em) {
+        .header__heading--sub {
+          font-size: 4rem; } }
   .header__img {
     position: absolute;
     top: 10%;
@@ -103,6 +116,12 @@ h4 {
     background-image: url("../photo/model.png");
     background-size: contain;
     background-repeat: no-repeat; }
+    @media (max-width: 36em) {
+      .header__img {
+        top: 43%;
+        left: 50%;
+        width: 60%;
+        transform: translate(-50%); } }
 
 .navbar {
   width: 85vw;
@@ -117,10 +136,16 @@ h4 {
     text-decoration: none;
     font-size: 3.3rem;
     font-weight: 800; }
+    @media (max-width: 36em) {
+      .navbar__brand {
+        font-size: 3rem; } }
   .navbar__nav {
     margin-left: auto;
     display: flex;
     list-style: none; }
+    @media (max-width: 36em) {
+      .navbar__nav {
+        display: none; } }
   .navbar__link {
     margin-right: 2rem;
     color: #fff;
@@ -136,12 +161,18 @@ h4 {
   z-index: -1;
   text-shadow: 0 0 12px #231f20;
   padding: 25vh 0 0 0; }
+  @media (max-width: 36em) {
+    .shadow {
+      padding: 15vh 0 0 0; } }
 
 .read-more {
   position: absolute;
   top: 80vh;
   width: 80rem;
   text-align: center; }
+  @media (max-width: 36em) {
+    .read-more {
+      width: 100%; } }
 
 .about {
   padding: 5vw 10vw;
@@ -150,7 +181,7 @@ h4 {
   max-width: 160rem;
   box-sizing: border-box;
   margin: 0 auto; }
-  .about ::before {
+  .about::before {
     content: "";
     top: 0%;
     left: 70%;
@@ -161,12 +192,18 @@ h4 {
     width: 55vw;
     height: 55vw;
     background-color: #171717; }
+    @media (max-width: 36em) {
+      .about::before {
+        display: none; } }
 
 .about-wrapper {
   max-width: 120rem;
   display: flex;
   margin: 0 auto;
   justify-content: space-between; }
+  @media (max-width: 36em) {
+    .about-wrapper {
+      flex-wrap: wrap; } }
 
 .about-text {
   max-width: 45rem;
@@ -175,9 +212,15 @@ h4 {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start; }
+  @media (max-width: 36em) {
+    .about-text {
+      align-items: center; } }
   .about-text p {
     margin-top: 2rem;
     margin-right: 10rem; }
+    @media (max-width: 36em) {
+      .about-text p {
+        margin-right: auto; } }
   .about-text .btn {
     margin-top: 2rem; }
 
@@ -185,6 +228,10 @@ h4 {
   max-width: 60rem;
   flex: 1 1;
   z-index: -3; }
+  @media (max-width: 36em) {
+    .about-img {
+      flex: 100%;
+      order: -1; } }
   .about-img img {
     width: 100%; }
 
@@ -196,6 +243,10 @@ h4 {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr)); }
+  @media (max-width: 20em) {
+    .services {
+      grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+      padding: 5vw 3vw; } }
   .services h2 {
     text-align: center;
     grid-column: 1 / -1;
@@ -232,6 +283,9 @@ h4 {
   .process h2 {
     padding: 0 10vw;
     max-width: 120rem; }
+    @media (max-width: 36em) {
+      .process h2 {
+        text-align: center; } }
 
 .processes {
   padding-left: 10vw;
@@ -239,10 +293,18 @@ h4 {
   overflow: hidden;
   margin: 0 auto;
   display: flex; }
+  @media (max-width: 36em) {
+    .processes {
+      flex-direction: column;
+      padding: 0 2rem; } }
   .processes__main-text {
     flex: 0 0 20%;
     margin-top: 3rem;
     margin-right: 12rem; }
+    @media (max-width: 36em) {
+      .processes__main-text {
+        margin-right: auto;
+        text-align: center; } }
     .processes__main-text .btn {
       margin: 3rem 0; }
   .processes__image {
@@ -259,6 +321,11 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
+    @media (max-width: 36em) {
+      .processes__image {
+        order: -1;
+        margin: 0;
+        transform: skewX(0); } }
     .processes__image:nth-child(2)::after {
       content: "";
       position: absolute;
@@ -272,6 +339,9 @@ h4 {
       background-position: center;
       transform: skewX(25deg);
       z-index: -1; }
+      @media (max-width: 36em) {
+        .processes__image:nth-child(2)::after {
+          transform: skewX(0); } }
     .processes__image:nth-child(3)::after {
       content: "";
       position: absolute;
@@ -285,6 +355,9 @@ h4 {
       background-position: center;
       transform: skewX(25deg);
       z-index: -1; }
+      @media (max-width: 36em) {
+        .processes__image:nth-child(3)::after {
+          transform: skewX(0); } }
     .processes__image:nth-child(4)::after {
       content: "";
       position: absolute;
@@ -298,6 +371,9 @@ h4 {
       background-position: center;
       transform: skewX(25deg);
       z-index: -1; }
+      @media (max-width: 36em) {
+        .processes__image:nth-child(4)::after {
+          transform: skewX(0); } }
   .processes span {
     align-self: flex-end;
     transform: skewX(25deg);
@@ -305,11 +381,17 @@ h4 {
     color: #fff;
     font-weight: 700;
     margin-right: 2rem; }
+    @media (max-width: 36em) {
+      .processes span {
+        transform: skewX(0); } }
   .processes__text {
     transform: skewX(25deg);
     color: #fff;
     padding: 2rem 4rem;
     font-size: 1.5rem; }
+    @media (max-width: 36em) {
+      .processes__text {
+        transform: skewX(0); } }
 
 .team {
   padding: 5vw 10vw;
@@ -323,24 +405,40 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media (max-width: 36em) {
+    .slider-wrapper {
+      flex-direction: column; } }
   .slider-wrapper .arrow-left {
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 3rem 3rem 3rem 0;
     border-color: transparent #424240 transparent transparent; }
+    @media (max-width: 36em) {
+      .slider-wrapper .arrow-left {
+        border-width: 0 3rem 3rem 3rem;
+        border-color: transparent transparent #424240 transparent;
+        margin-bottom: 2rem; } }
   .slider-wrapper .arrow-right {
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 3rem 0 3rem 3rem;
     border-color: transparent transparent transparent #424240; }
+    @media (max-width: 36em) {
+      .slider-wrapper .arrow-right {
+        border-width: 3rem 3rem 0 3rem;
+        border-color: #424240 transparent transparent transparent; } }
 
 .team-slider {
   display: flex;
   width: 90%;
   align-items: center;
   justify-content: center; }
+  @media (max-width: 36em) {
+    .team-slider {
+      flex-direction: column;
+      width: 100%; } }
 
 .team-person {
   margin: 4rem 2rem;
@@ -354,6 +452,10 @@ h4 {
     border: 1rem solid #fff;
     transform: rotate(45deg);
     overflow: hidden; }
+    @media (max-width: 36em) {
+      .team-person__img {
+        width: 14rem;
+        height: 14rem; } }
     .team-person__img img {
       width: 150%;
       transform: rotate(-45deg) translateY(-6rem); }
@@ -362,6 +464,10 @@ h4 {
       width: 26rem;
       height: 26rem;
       z-index: 1; }
+      @media (max-width: 36em) {
+        .team-person__img--active {
+          width: 20rem;
+          height: 20rem; } }
       .team-person__img--active img {
         transform: rotate(-45deg) translateY(-8rem); }
   .team-person__name {
@@ -404,13 +510,19 @@ h4 {
   padding: 5vw 10vw;
   margin: 0 auto;
   max-width: 120rem; }
+  @media (max-width: 36em) {
+    .clients h2 {
+      text-align: center; } }
 
 .client {
   margin: 6rem 0;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between; }
+  @media (max-width: 36em) {
+    .client {
+      flex-direction: column;
+      margin: 6rem 0 3rem 0; } }
   .client__image {
     height: 20rem;
     width: 20rem;
@@ -420,6 +532,9 @@ h4 {
     border: 1rem solid #fff;
     transform: rotate(45deg);
     overflow: hidden; }
+    @media (max-width: 36em) {
+      .client__image {
+        margin-right: 0; } }
     .client__image img {
       width: 150%;
       transform: rotate(-45deg) translateY(-6.5rem); }
@@ -430,21 +545,47 @@ h4 {
     flex-direction: column;
     justify-content: space-around;
     position: relative; }
+    @media (max-width: 36em) {
+      .client__quote-box {
+        flex: 100%;
+        text-align: center;
+        height: auto;
+        margin-top: 2rem; } }
     .client__quote-box::before {
       content: "\201C";
       position: absolute;
       top: -7.5rem;
       left: -10rem;
       font-size: 20rem; }
+      @media (max-width: 36em) {
+        .client__quote-box::before {
+          font-size: 10rem;
+          top: -4rem;
+          left: -2.5rem; } }
+      @media (max-width: 20em) {
+        .client__quote-box::before {
+          font-size: 8rem;
+          top: -3rem;
+          left: -.7rem; } }
   .client__quote {
     font-weight: 400;
     font-style: italic;
     line-height: 30px; }
+    @media (max-width: 20em) {
+      .client__quote {
+        line-height: 25px;
+        font-size: 1.4rem; } }
   .client__name {
     font-weight: 700; }
+    @media (max-width: 36em) {
+      .client__name {
+        margin: 2rem 0; } }
 
 .other-clients {
   display: flex; }
+  @media (max-width: 36em) {
+    .other-clients {
+      justify-content: space-around; } }
   .other-clients-photo {
     width: 4rem;
     height: 4rem;
@@ -452,9 +593,17 @@ h4 {
     box-shadow: 2px 2px 4px rgba(35, 31, 32, 0.22);
     transform: rotate(45deg);
     overflow: hidden; }
+    @media (max-width: 36em) {
+      .other-clients-photo {
+        margin: 3rem 2rem 0 2rem;
+        width: 6rem;
+        height: 6rem; } }
     .other-clients-photo img {
       width: 150%;
       transform: rotate(-45deg) translateY(-1rem); }
+      @media (max-width: 36em) {
+        .other-clients-photo img {
+          transform: rotate(-45deg) translateY(-2rem); } }
 
 footer {
   padding: 5vw 10vw;
@@ -484,6 +633,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center; }
+  @media (max-width: 36em) {
+    .contact {
+      justify-content: initial; } }
   .contact__text h4 {
     color: #fff;
     text-transform: none; }
@@ -506,3 +658,6 @@ footer {
   border-top: 2px solid #6f6f6e;
   padding: 2rem;
   font-size: 1.3rem; }
+  @media (max-width: 36em) {
+    .copyright {
+      text-align: center; } }
