--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -24,12 +24,20 @@ footer {
   align-self: normal;
   align-items: center;
 
+
+
 }
 .contact {
   min-width: 20rem;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: $bp-small) {
+    justify-content: initial;
+
+   }
+
 
   &__text h4 {
     color: $font-color-secondary;
@@ -61,4 +69,7 @@ footer {
   border-top: 2px solid $font-color;
   padding: 2rem;
   font-size: 1.3rem;
+  @media (max-width: $bp-small) {
+    text-align: center;
+  }
 }
