--- a/sass/_team.scss
+++ b/sass/_team.scss
@@ -4,6 +4,7 @@
   max-width: 120rem;
   background-color: $bg-color-primary;
 
+
   & h2 {
     text-align: center;
   }
@@ -15,12 +16,23 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (max-width: $bp-small) {
+    flex-direction: column;
+
+   }
+
   & .arrow-left {
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 3rem 3rem 3rem 0;
     border-color: transparent $color-arrow transparent transparent;
+
+    @media (max-width: $bp-small) {
+      border-width: 0 3rem 3rem 3rem;
+      border-color: transparent transparent $color-arrow  transparent;
+      margin-bottom: 2rem;
+     }
   }
 
   & .arrow-right {
@@ -29,6 +41,11 @@
     border-style: solid;
     border-width: 3rem 0 3rem 3rem;
     border-color: transparent transparent transparent $color-arrow;
+
+    @media (max-width: $bp-small) {
+      border-width: 3rem 3rem 0 3rem;
+      border-color: $color-arrow transparent transparent transparent;
+     }
   }
 }
 
@@ -37,6 +54,11 @@
   width: 90%;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: $bp-small) {
+    flex-direction: column;
+    width: 100%;
+   }
 }
 
 .team-person {
@@ -53,6 +75,11 @@
     transform: rotate(45deg);
     overflow: hidden;
 
+    @media (max-width: $bp-small) {
+      width: 14rem;
+      height: 14rem;
+     }
+
 
     & img {
       width: 150%;
@@ -64,6 +91,11 @@
       width: 26rem;
       height: 26rem;
       z-index: 1;
+
+      @media (max-width: $bp-small) {
+        width: 20rem;
+        height: 20rem;
+       }
 
       & img {
         transform: rotate(-45deg) translateY(-8rem);
